--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Javascript Counter</h1>
+    <h1 align="center">Tasbih Counter</h1>
     <h2 align="center" id="count-el">0</h2>
     <button align="center" onclick="count()">Increase</button>
     <button align="center" onclick="count0()">Decrease</button>
